--- a/week03/app/src/main/res/layout/activity_main.xml
+++ b/week03/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout>
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#9DE2D7"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_marginTop="100dp">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="28sp"
+            android:textStyle="bold"
+            android:textColor="@color/black"
+            android:layout_margin="10dp"
+            android:layout_gravity="center"
+            android:textAlignment="center"
+            android:text="Big Wave Big Wave 피하지방\n 인생은 한방" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_marginTop="30dp"
+        android:layout_height="150dp">
+
+        <ImageView
+            android:id="@+id/dice1"
+            android:src="@drawable/dice_1"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_weight="1"/>
+
+        <ImageView
+            android:id="@+id/dice2"
+            android:src="@drawable/dice_2"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_weight="1" />
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/diceStartBtn"
+        android:text="인생 고고!"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="50dp"
+        android:backgroundTint="#3258B6"
+        android:textColor="@color/white"/>
+
+
+
+</LinearLayout>
+</layout>
